--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>LAB | Flappy Birds</title>
   </head>
   <body>
-    <img src="./images/logo.png" alt="" style="width:50%;" />
+    <img id="logo" src="./images/logo.png" alt="" style="width: 50%" />
     <br />
     <button id="start-button">StartGame</button>
-    <div id="game-board">
-      <canvas id="my-canvas"></canvas>
+    <div id="game-board" class="hidden">
+      <canvas id="my-canvas" width="1200" height="600"></canvas>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
